<resources>
    <string name="app_name">Xô sÔ Quáng Ngäi</string>
    <string name="menu1">Home</string>
    <string name="menu2">About</string>
    <string name="menu3">Rich Luck</string>
    <string name="menu4">Terms</string>
    <string name="menu5">Comments</string>
    <string name="how_to_play_mng_lotto_and_earn_daily_cash">How to play MNG lotto and earn daily cash</string>
    <string name="how_mng_lotto_work">How MNG Lotto Work</string>
    <string name="the_game">THE GAME</string>
    <string name="mng_is_a_raffle_game_lottery_system_with_10_numbers_distributed_at_random_the_drawn_is_done_by_a_computer_program_algorithm_to_pick_one_1_number_person_from_ten_10_numbers_at_random">MNg is a raffle game lottery system with 10 numbers distributed at random. The drawn is done by a computer program (algorithm) to pick one (1) number (person) from ten (10 numbers) at random.</string>
    <string name="are_you_new_to_mng_loto">Are you new to MNG Loto?</string>
    <string name="how_to_play">How To Play?</string>
    <string name="content_about">Để giành được một vé xổ số, những con số bạn chọn phải khớp với một số con số được rút ra. Khi mua vé, hãy chọn một bộ số, hoặc \"dòng\". Một hàng có thể là một tập hợp từ 5 đến 7 số, từ 1 đến 45 hoặc 1 đến 50, tùy thuộc vào trò chơi. Bạn càng có nhiều số liên tiếp khớp với các số trúng thưởng, bạn càng giành được nhiều chiến thắng. và Để giành được giải độc đắc, tất cả các số của bạn phải khớp với các số được rút ra.</string>
    <string name="terms"><![CDATA[Terms & Cond.]]></string>
</resources>