<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:background="@color/app_red"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/how_to_play_mng_lotto_and_earn_daily_cash"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/banner3"
        app:layout_constraintDimensionRatio="1024:500"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_mng_lotto_work"
            android:textSize="12sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_game"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mng_is_a_raffle_game_lottery_system_with_10_numbers_distributed_at_random_the_drawn_is_done_by_a_computer_program_algorithm_to_pick_one_1_number_person_from_ten_10_numbers_at_random"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_new_to_mng_loto"
            android:textSize="12sp"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>